Deprecated Konstruktor nicht mehr verwenden